Update project: Refactor frontend request lifecycle and optimize project